--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kidzy</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Kidzy | Página Inicial</title>
 </head>
 <body>
-    
+    <!-- Menu -->
+    <header>
+    <nav id="menu-container">
+        <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
+        <div id="menu-op1">
+            <a href="#" class="menu-text">Home</a>
+            <a href="#" class="menu-text">Catálogo</a>
+        </div>
+        <div class="menu-op2">
+            <button class="menu-buttom1"><a href=""><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
+            <button class="menu-buttom2"><a href="#">Login</a></button>
+        </div>
+    </nav>
+    </header>
+    <div class="banner-container">
+        <img src="images/banner.png" id="banner-img" alt="Banner">
+    </div>
+
+    <!-- Banner -->
 </body>
 </html>
