--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <nav id="menu-container">
         <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
-        <div id="menu-op1">
+        <div id="menu-op">
             <a href="#" class="menu-text">Home</a>
             <a href="#" class="menu-text">Catálogo</a>
         </div>
@@ -21,10 +21,86 @@
         </div>
     </nav>
     </header>
+     <!-- Banner -->
     <div class="banner-container">
-        <img src="images/banner.png" id="banner-img" alt="Banner">
+        <img src="images/texto-banner.svg" id="banner-text">
+        <img src="images/imagem-banner.svg" id="banner-img">
     </div>
 
-    <!-- Banner -->
+    <!-- Destaques -->
+    <div class="destaques-container">
+        <div class="title-section">
+            <h1 class="titulos">> Queridinhos do momento</h1>
+            <p class="subtitulos">Você não pode perder!</p>
+        </div>
+
+        <div class="options-container">
+            <div class="option">
+                <div class="op-content">
+                    <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                    </div>
+
+                    <div class="op-info">
+                        <div class="op-text">
+                        <p>Jogo de montar peças</p>
+                        <p>R$49,99</p>
+                        </div>
+                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="option">
+                <div class="op-content">
+                    <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                    </div>
+
+                    <div class="op-info">
+                        <div class="op-text">
+                        <p>Jogo de montar peças</p>
+                        <p>R$49,99</p>
+                        </div>
+                        <button type="button"><img src="images/carrinho.svg" class="options-button"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="option">
+                <div class="op-content">
+                    <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                    </div>
+
+                    <div class="op-info">
+                        <div class="op-text">
+                        <p>Jogo de montar peças</p>
+                        <p>R$49,99</p>
+                        </div>
+                        <button type="button"><img src="images/carrinho.svg" class="options-button"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="option">
+                <div class="op-content">
+                    <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                    </div>
+
+                    <div class="op-info">
+                        <div class="op-text">
+                        <p>Jogo de montar peças</p>
+                        <p>R$49,99</p>
+                        </div>
+                        <button type="button"><img src="images/carrinho.svg" class="options-button"></button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+   
 </body>
 </html>
