--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,8 @@
         <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
         <div id="menu-op">
             <a href="#" class="menu-text">Home</a>
-            <a href="#" class="menu-text">Catálogo</a>
+            <a href="#" class="menu-text">Sobre nós</a>
+            <a href="catalog.html" class="menu-text">Catálogo</a>
         </div>
         <div class="menu-op2">
             <button class="menu-buttom1"><a href=""><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
@@ -28,6 +29,7 @@
     </div>
 
     <!-- Destaques -->
+
     <div class="destaques-container">
         <div class="title-section">
             <h1 class="titulos">> Queridinhos do momento</h1>
@@ -35,6 +37,8 @@
         </div>
 
         <div class="options-container">
+
+
             <div class="option">
                 <div class="op-content">
                     <div class="op-img">
@@ -62,7 +66,7 @@
                         <p>Jogo de montar peças</p>
                         <p>R$49,99</p>
                         </div>
-                        <button type="button"><img src="images/carrinho.svg" class="options-button"></button>
+                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
                     </div>
                 </div>
             </div>
@@ -78,7 +82,7 @@
                         <p>Jogo de montar peças</p>
                         <p>R$49,99</p>
                         </div>
-                        <button type="button"><img src="images/carrinho.svg" class="options-button"></button>
+                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
                     </div>
                 </div>
             </div>
@@ -94,13 +98,51 @@
                         <p>Jogo de montar peças</p>
                         <p>R$49,99</p>
                         </div>
-                        <button type="button"><img src="images/carrinho.svg" class="options-button"></button>
+                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
    
+    <!-- Avaliações -->
+    <div class="avaliacoes-container">
+        <div class="title-section">
+            <h1 class="titulos">> Nossos clientes aprovam!</h1>
+            <p class="subtitulos">De quem já experimentou!</p>
+        </div>
+        <div class="avaliacoes-section">
+            <div class="aval">
+                <h3 class="nome-aval">Marylane Silva</h3>
+                <p class="text-aval">"Os brinquedos são incríveis! Minha filha está adorando. São seguros e educativos. Recomendo a todos os pais!" 😊👏</p>
+            </div>
+
+            <div class="aval">
+                <h3 class="nome-aval">Lurdes Santos</h3>
+                <p class="text-aval">“Minha filha fica alegre toda vez que abre uma caixa. Ótima qualidade e entrega rápida. Muito satisfeita!" 😄🌟</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- TEXTO -->
+    <div class="texto-container">
+        <div class="title-section">
+            <h1 class="titulos">> A importância da diversão</h1>
+            <p class="subtitulos">Melhor desenvolvimento na infância</p>
+        </div>
+        <div class="texto-section">
+            <h2 class="titulo-texto"> As Ferramentas Mágicas do Desenvolvimento Infantil</h2>
+            <p class="text-texto">Brinquedos são como as ferramentas mágicas do desenvolvimento infantil! Eles não apenas proporcionam diversão interminável, mas também ajudam as crianças a aprender, a imaginar e a crescer. 
+
+                Vamos celebrar os brinquedos que fazem as crianças sorrir, aprender e crescer! 😄🚀🎨</p>
+        </div>
+    </div>
+
+    <!-- RODAPÉ -->
+    <div class="rodape-container">
+        <p class="text-rodape">Home</p>
+        <p class="text-rodape">Sobre nós</p>
+        <p class="text-rodape">Catálogo</p>
+    </div>
 </body>
 </html>
