--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kidzy | Página Inicial</title>
 </head>
 <body>
@@ -22,23 +23,22 @@
         </div>
     </nav>
     </header>
+    
      <!-- Banner -->
-    <div class="banner-container">
-        <img src="images/texto-banner.svg" id="banner-text">
-        <img src="images/imagem-banner.svg" id="banner-img">
+    <div class="ban-con-1">
+        <img src="images/texto-banner1.svg" id="banner-text">
+        <img src="images/imagem-banner1.svg" id="banner-img">
     </div>
 
     <!-- Destaques -->
 
-    <div class="destaques-container">
+    <div class="section-container">
         <div class="title-section">
             <h1 class="titulos">> Queridinhos do momento</h1>
             <p class="subtitulos">Você não pode perder!</p>
         </div>
 
         <div class="options-container">
-
-
             <div class="option">
                 <div class="op-content">
                     <div class="op-img">
@@ -47,8 +47,8 @@
 
                     <div class="op-info">
                         <div class="op-text">
-                        <p>Jogo de montar peças</p>
-                        <p>R$49,99</p>
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
                         </div>
                         <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
                     </div>
@@ -63,8 +63,8 @@
 
                     <div class="op-info">
                         <div class="op-text">
-                        <p>Jogo de montar peças</p>
-                        <p>R$49,99</p>
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
                         </div>
                         <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
                     </div>
@@ -79,8 +79,8 @@
 
                     <div class="op-info">
                         <div class="op-text">
-                        <p>Jogo de montar peças</p>
-                        <p>R$49,99</p>
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
                         </div>
                         <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
                     </div>
@@ -95,8 +95,8 @@
 
                     <div class="op-info">
                         <div class="op-text">
-                        <p>Jogo de montar peças</p>
-                        <p>R$49,99</p>
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
                         </div>
                         <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
                     </div>
@@ -106,40 +106,57 @@
     </div>
    
     <!-- Avaliações -->
-    <div class="avaliacoes-container">
+    <div class="section-container">
         <div class="title-section">
-            <h1 class="titulos">> Nossos clientes aprovam!</h1>
+            <h1 class="titulos">> Nossos clientes aprovaram!</h1>
             <p class="subtitulos">De quem já experimentou!</p>
         </div>
-        <div class="avaliacoes-section">
+        <div class="content-container">
             <div class="aval">
-                <h3 class="nome-aval">Marylane Silva</h3>
-                <p class="text-aval">"Os brinquedos são incríveis! Minha filha está adorando. São seguros e educativos. Recomendo a todos os pais!" 😊👏</p>
+                <div class="aval-img">
+                    <img src="images/perfil.png" alt="">
+                </div>
+                <div class="aval-text">
+                <h3>Marylane Silva</h3>
+                <p>"Os brinquedos são incríveis! Minha filha está adorando. São seguros e educativos. Recomendo a todos os pais!" 😊👏</p>
+                </div>
             </div>
 
             <div class="aval">
-                <h3 class="nome-aval">Lurdes Santos</h3>
-                <p class="text-aval">“Minha filha fica alegre toda vez que abre uma caixa. Ótima qualidade e entrega rápida. Muito satisfeita!" 😄🌟</p>
+                <div class="aval-img">
+                <img src="images/perfil].png" alt="">
+                </div>
+                <div class="aval-text">
+                <h3>Lurdes Santos</h3>
+                <p>“Minha filha fica alegre toda vez que abre uma caixa. Ótima qualidade e entrega rápida. Muito satisfeita!" 😄🌟</p>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- TEXTO -->
-    <div class="texto-container">
+    <div class="section-container">
         <div class="title-section">
             <h1 class="titulos">> A importância da diversão</h1>
             <p class="subtitulos">Melhor desenvolvimento na infância</p>
         </div>
-        <div class="texto-section">
-            <h2 class="titulo-texto"> As Ferramentas Mágicas do Desenvolvimento Infantil</h2>
-            <p class="text-texto">Brinquedos são como as ferramentas mágicas do desenvolvimento infantil! Eles não apenas proporcionam diversão interminável, mas também ajudam as crianças a aprender, a imaginar e a crescer. 
 
-                Vamos celebrar os brinquedos que fazem as crianças sorrir, aprender e crescer! 😄🚀🎨</p>
+        <div class="content-container">
+            <div class="text-container">
+            <img src="images/montar1.svg" alt="" class="texto-img">
+            <div class="texto-text">
+            <h2> As Ferramentas Mágicas do Desenvolvimento Infantil</h2>
+            <p>Bem-vindos(as) à Kidzy! Aqui, não vendemos apenas pedaços de plástico e metal, nós entregamos sonhos, aventuras e desenvolvimento infantil embalados em caixas coloridas. Porque acreditem, brincar é coisa séria!</p> 
+            <p>Os brinquedos são como os ingredientes secretos para um bolo de crescimento saudável. Eles não apenas mantêm as crianças entretidas por horas a fio (e os pais sãos de juízo), mas também desencadeiam uma série de superpoderes. Eles incentivam a criatividade, a resolução de problemas e a construção de habilidades motoras, tudo isso enquanto as crianças se divertem sem nem perceber que estão aprendendo.</p>
+            <p>Então, se você está em busca do presente perfeito ou simplesmente quer ver um sorriso radiante no rosto de uma criança, explore nossa seleção de brinquedos incríveis. De quebra-cabeças desafiadores a brinquedos educativos, temos o que você precisa para ajudar as crianças a crescerem, aprenderem e, é claro, se divertirem muito!</p>
+            <p>Entre no mundo dos brinquedos, onde a diversão nunca acaba e o desenvolvimento nunca para. Seja parte dessa jornada mágica conosco. Com nossos brinquedos, a imaginação voa e o aprendizado nunca sai de moda. 😄🚀🎨</p>
+            </div>
+            </div>
         </div>
     </div>
 
     <!-- RODAPÉ -->
-    <div class="rodape-container">
+    <div id="rodape-container">
         <p class="text-rodape">Home</p>
         <p class="text-rodape">Sobre nós</p>
         <p class="text-rodape">Catálogo</p>
