--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kidzy | Catálogo</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <nav id="menu-container">
             <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div id="menu-op">
-                <a href="#" class="menu-text">Home</a>
+                <a href="index.html" class="menu-text">Home</a>
                 <a href="#" class="menu-text">Sobre nós</a>
                 <a href="#" class="menu-text">Catálogo</a>
             </div>
@@ -22,5 +23,16 @@
             </div>
         </nav>
         </header>
+
+        <div class="ban-con-2">
+            <img src="images/Menino.svg" alt="" class="menino-ban2">
+            <img src="images/texto-banner2.svg" alt="">
+            <img src="images/brinquedos.svg" alt="">
+        </div>
+
+        <div class="title-section">
+            <h1 class="titulos">> Descubra nosso catálogo</h1>
+            <p class="subtitulos">Você não pode perder!</p>
+        </div>
 </body>
 </html>
