--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <nav id="menu-container">
         <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
         <div id="menu-op">
-            <a href="#" class="menu-text">Home</a>
-            <a href="#" class="menu-text">Sobre nós</a>
+            <a href="index.html" class="menu-text">Home</a>
+            <a href="aboutUs.html" class="menu-text">Sobre nós</a>
             <a href="catalog.html" class="menu-text">Catálogo</a>
+            <a href="contato.html" class="menu-text">Contato</a>
         </div>
         <div class="menu-op2">
-            <button class="menu-buttom1"><a href=""><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
+            <button class="menu-buttom1"><a href="carrinho.html"><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
             <button class="menu-buttom2"><a href="#">Login</a></button>
         </div>
     </nav>
@@ -50,7 +51,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
@@ -66,7 +67,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
@@ -82,7 +83,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
@@ -98,7 +99,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                         </div>
-                        <button type="button" class="buy-buttom"><img src="images/carrinho.svg" class="options-button"></button>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                     </div>
                 </div>
             </div>
@@ -157,9 +158,10 @@
 
     <!-- RODAPÉ -->
     <div id="rodape-container">
-        <p class="text-rodape">Home</p>
-        <p class="text-rodape">Sobre nós</p>
-        <p class="text-rodape">Catálogo</p>
+        <a href="index.html" class="text-rodape">Home</a>
+        <a href="aboutUs.html" class="text-rodape">Sobre nós</a>
+        <a href="catalog.html" class="text-rodape">Catálogo</a>
+        <a href="contato.html" class="text-rodape">Contato</a>
     </div>
 </body>
 </html>
