--- a/catalog.html
+++ b/catalog.html
@@ -8,31 +8,245 @@
     <title>Kidzy | Catálogo</title>
 </head>
 <body>
-    <!-- Menu -->
+    <!-- M E N U  -->
     <header>
         <nav id="menu-container">
             <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div id="menu-op">
                 <a href="index.html" class="menu-text">Home</a>
-                <a href="#" class="menu-text">Sobre nós</a>
-                <a href="#" class="menu-text">Catálogo</a>
+                <a href="aboutUs.html" class="menu-text">Sobre nós</a>
+                <a href="catalog.html" class="menu-text">Catálogo</a>
+                <a href="contato.html" class="menu-text">Contato</a>
             </div>
             <div class="menu-op2">
-                <button class="menu-buttom1"><a href=""><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
+                <button class="menu-buttom1"><a href="carrinho.html"><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
                 <button class="menu-buttom2"><a href="#">Login</a></button>
             </div>
         </nav>
-        </header>
+    </header>
 
-        <div class="ban-con-2">
-            <img src="images/Menino.svg" alt="" class="menino-ban2">
-            <img src="images/texto-banner2.svg" alt="">
-            <img src="images/brinquedos.svg" alt="">
-        </div>
+        <!-- B A N N E R -->
+    <div class="ban-con-2">
+        <img src="images/Menino.svg" alt="" class="menino-ban2">
+        <img src="images/texto-banner2.svg" alt="">
+        <img src="images/brinquedos.svg" alt="">
+    </div>
 
+    <div class="section-container">
         <div class="title-section">
             <h1 class="titulos">> Descubra nosso catálogo</h1>
             <p class="subtitulos">Você não pode perder!</p>
         </div>
+    </div>
+        <!-- L I N H A  U M -->
+    <div class="options-container"><a href="productPage.html">
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+    </a>
+    </div>
+
+        <!-- L I N H A  D O I S -->
+    <div class="options-container">
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>  
+    </div>
+
+            <!-- L I N H A  T R Ê S -->
+    <div class="options-container">
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="option">
+            <div class="op-content">
+                <div class="op-img">
+                    <img src="images/produts/op1.jpg" class="options-img">
+                </div>
+
+                <div class="op-info">
+                    <div class="op-text">
+                        <p class="name">Jogo de montar peças</p>
+                        <p class="price">R$49,99</p>
+                    </div>
+                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+        
+
+    <!-- RODAPÉ -->
+    <div id="rodape-container">
+        <a href="index.html" class="text-rodape">Home</a>
+        <a href="aboutUs.html" class="text-rodape">Sobre nós</a>
+        <a href="catalog.html" class="text-rodape">Catálogo</a>
+        <a href="contato.html" class="text-rodape">Contato</a>
+    </div>
 </body>
 </html>
