--- a/carrinho.html
+++ b/carrinho.html
@@ -14,8 +14,8 @@
             <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div id="menu-op">
                 <a href="index.html" class="menu-text">Home</a>
-                <a href="aboutUs.html" class="menu-text">Sobre nós</a>
                 <a href="catalog.html" class="menu-text">Catálogo</a>
+                <a href="aboutUs.html" class="menu-text">Sobre nós</a>
                 <a href="contato.html" class="menu-text">Contato</a>
             </div>
             <div class="menu-op2">
@@ -25,18 +25,14 @@
         </nav>
         </header>
 
-        <div class="ban-con-2">
+        <div class="banner">
+            <img src="images/Banners/CarrinhoBanner.svg" alt="" srcset="">
         </div>
 
         <div class="section-container">
         <div class="title-section">
             <h1 class="titulos">> Meu carrinho</h1>
             <p class="subtitulos">Continue comprando</p>
-        </div>
-        <div class="line">
-            <div class="option-catalog">
-                
-            </div>
         </div>
         </div>
 
