--- a/catalog.html
+++ b/catalog.html
@@ -14,8 +14,8 @@
             <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
             <div id="menu-op">
                 <a href="index.html" class="menu-text">Home</a>
-                <a href="aboutUs.html" class="menu-text">Sobre nós</a>
                 <a href="catalog.html" class="menu-text">Catálogo</a>
+                <a href="aboutUs.html" class="menu-text">Sobre nós</a>
                 <a href="contato.html" class="menu-text">Contato</a>
             </div>
             <div class="menu-op2">
@@ -26,11 +26,10 @@
     </header>
 
         <!-- B A N N E R -->
-    <div class="ban-con-2">
-        <img src="images/Menino.svg" alt="" class="menino-ban2">
-        <img src="images/texto-banner2.svg" alt="">
-        <img src="images/brinquedos.svg" alt="">
-    </div>
+        <div class="banner">
+            <img src="images/Banners/CatalogBanner.svg" alt="" srcset="">
+
+        </div>
 
     <div class="section-container">
         <div class="title-section">
@@ -39,7 +38,7 @@
         </div>
     </div>
         <!-- L I N H A  U M -->
-    <div class="options-container"><a href="productPage.html">
+    <div class="options-container">
         <div class="option">
             <div class="op-content">
                 <div class="op-img">
@@ -48,7 +47,7 @@
 
                 <div class="op-info">
                     <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
+                        <p class="name">Caixa de encaixar formas</p>
                         <p class="price">R$49,99</p>
                     </div>
                         <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
@@ -103,7 +102,6 @@
                 </div>
             </div>
         </div>
-    </a>
     </div>
 
         <!-- L I N H A  D O I S -->
