--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a href="#" ><img src="images/Kidzy.svg" id="menu-logotipo" alt="Logo"></a>
         <div id="menu-op">
             <a href="index.html" class="menu-text">Home</a>
-            <a href="aboutUs.html" class="menu-text">Sobre nós</a>
             <a href="catalog.html" class="menu-text">Catálogo</a>
+            <a href="aboutUs.html" class="menu-text">Sobre nós</a>
             <a href="contato.html" class="menu-text">Contato</a>
         </div>
         <div class="menu-op2">
@@ -26,9 +26,9 @@
     </header>
     
      <!-- Banner -->
-    <div class="ban-con-1">
-        <img src="images/texto-banner1.svg" id="banner-text">
-        <img src="images/imagem-banner1.svg" id="banner-img">
+    
+    <div class="banner">
+        <img src="images/Banners/HomeBanner.svg" alt="" srcset="">
     </div>
 
     <!-- Destaques -->
