--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Kidzy | Sobre nós</title>
+    <title>Kidzy | Contato</title>
 </head>
 <body>
     <!-- Menu -->
@@ -25,14 +26,13 @@
         </nav>
         </header>
 
-        <div class="banner">
-            <img src="images/Banners/AboutUsBanner.svg" alt="" srcset="">
+        <div class="ban-con-2">
         </div>
-
 
         <div class="section-container">
         <div class="title-section">
-            <h1 class="titulos">> Sobre nós</h1>
+            <h1 class="titulos">> Meu carrinho</h1>
+            <p class="subtitulos">Continue comprando</p>
         </div>
         <div class="line">
             <div class="option-catalog">
