--- a/aboutUs.html
+++ b/aboutUs.html
@@ -25,19 +25,34 @@
             </div>
         </nav>
         </header>
-
-        <div class="ban-con-2">
+        <div class="banner">
+            <img src="images/Banners/AboutUsBanner.svg" alt="" srcset="">
         </div>
 
         <div class="section-container">
         <div class="title-section">
-            <h1 class="titulos">> Meu carrinho</h1>
-            <p class="subtitulos">Continue comprando</p>
+            <h1 class="titulos">> Sobre nós</h1>
         </div>
-        <div class="line">
-            <div class="option-catalog">
-
-            </div>
+        <div class="text-aboutUs">
+            <h1>Kidzy: Um mundo mágico!</h1>
+            <p>Bem-vindo à Kidzy, o seu destino online para um universo encantado de diversão, aprendizado e imaginação! Nós somos apaixonados por brinquedos infantis e acreditamos que cada criança merece acesso aos melhores brinquedos que podem enriquecer suas vidas de maneira criativa e significativa.</p>
+            <h2>> Quem somos nós?</h2>
+            <p>A Kidzy nasceu do desejo de oferecer aos pais e cuidadores uma loja virtual confiável e diversificada, repleta de brinquedos que estimulam o desenvolvimento cognitivo, emocional e físico das crianças. Com anos de experiência no mercado de brinquedos e um compromisso com a qualidade, segurança e inovação, estamos aqui para ser seu parceiro de confiança na jornada da infância.</p>
+            
+            <h2>> Nossa missão</h2>
+            <p>Nossa missão é simples: inspirar o sorriso de cada criança. Acreditamos que brinquedos não são apenas objetos, mas ferramentas que ajudam a construir memórias, desenvolver habilidades e desencadear a imaginação. Trabalhamos incansavelmente para oferecer uma ampla gama de brinquedos cuidadosamente selecionados, desde brinquedos educativos até os mais divertidos e emocionantes, para que cada criança possa explorar o mundo com alegria e curiosidade.</p>
+            <h2>> O quê nos diferencia?</h2>
+            <p>Seleção Criteriosa: Nossos especialistas em brinquedos escolhem a dedo cada produto com base em critérios de qualidade, segurança e valor educacional. <br>
+                Experiência Confiável: Comprometemo-nos a fornecer um atendimento excepcional ao cliente, ajudando-o a encontrar o brinquedo perfeito para cada criança. <br>
+                Inovação Contínua: Estamos sempre atentos às tendências e às últimas inovações em brinquedos, garantindo que ofereçamos o que há de melhor no mercado. <br>
+                Compromisso com a Segurança: A segurança das crianças é a nossa prioridade número um. Todos os produtos atendem ou excedem rigorosos padrões de segurança.</p>
+            <h2>> Nosso compromisso social</h2>
+            <p>Nós da Kidzy também acreditamos na importância de retribuir. Por isso, parte de nossos lucros é destinada a apoiar instituições de caridade e programas educacionais que beneficiam crianças em todo o mundo.</p>
+            <h2>>Junte-se a nós você também!</h2>
+            <p>Explore nosso catálogo e descubra uma gama infinita de brinquedos que podem fazer a diferença na vida de uma criança. Junte-se à nossa comunidade de pais, avós, tios e tias que compartilham o amor por proporcionar momentos especiais às crianças.</p>
+            <p>Obrigado por escolher o Mundo Mágico de Brinquedos como seu destino para alegria e aprendizado. Estamos ansiosos para fazer parte da sua jornada, e esperamos que você encontre a magia em cada brinquedo que escolher.</p>
+            <p>Divirta-se explorando, aprendendo e brincando!</p>
+            <p>Atenciosamente, a equipe da Kidzy!</p>
         </div>
         </div>
 
