--- a/carrinho.html
+++ b/carrinho.html
@@ -34,6 +34,21 @@
             <h1 class="titulos">> Meu carrinho</h1>
             <p class="subtitulos">Continue comprando</p>
         </div>
+        <div class="carrinho-container">
+            <div class="carrinho-option">
+                <div class="carrinho-option-img">
+                <img src="images/produts/p1/principal.jpg" alt="" srcset="">
+                </div>
+                <div class="carrinho-option-text">
+                <p>Caixa de encaixar formas</p>
+                <p>Tam: único</p>
+                <p>Cor: padrão</p>
+                </div>
+
+                <p>01</p>
+
+            </div>
+        </div>
         </div>
 
     <!-- RODAPÉ -->
