--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
                 <a href="contato.html" class="menu-text">Contato</a>
             </div>
             <div class="menu-op2">
-                <button class="menu-buttom1"><a href="carrinho.html"><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
+                <button class="menu-buttom1"><a href="productPage.html"><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
                 <button class="menu-buttom2"><a href="#">Login</a></button>
             </div>
         </nav>
@@ -50,7 +50,7 @@
                         <p class="name">Caixa de encaixar formas</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>  
@@ -184,7 +184,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
@@ -232,7 +232,7 @@
                         <p class="name">Jogo de montar peças</p>
                         <p class="price">R$49,99</p>
                     </div>
-                        <button type="button" class="buy-buttom"><a href="carrinho.html"><img src="images/carrinho.svg" class="options-button"></a></button>
+                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
         </div>
