--- a/carrinho.html
+++ b/carrinho.html
@@ -16,7 +16,6 @@
                 <a href="index.html" class="menu-text">Home</a>
                 <a href="catalog.html" class="menu-text">Catálogo</a>
                 <a href="aboutUs.html" class="menu-text">Sobre nós</a>
-                <a href="contato.html" class="menu-text">Contato</a>
             </div>
             <div class="menu-op2">
                 <button class="menu-buttom1"><a href="carrinho.html"><img src="images/carrinho.svg" id="carrinho" alt="carrinho"></a></button>
@@ -37,16 +36,28 @@
         <div class="carrinho-container">
             <div class="carrinho-option">
                 <div class="carrinho-option-img">
-                <img src="images/produts/p1/principal.jpg" alt="" srcset="">
+                    <img src="images/produts/p1/principal.jpg" alt="" srcset="">
                 </div>
+
                 <div class="carrinho-option-text">
-                <p>Caixa de encaixar formas</p>
-                <p>Tam: único</p>
-                <p>Cor: padrão</p>
+                    <p>Caixa de encaixar formas</p>
+                    <p>Tam: único</p>
+                    <p>Cor: padrão</p>
                 </div>
 
-                <p>01</p>
+                <div class="qtd-carrinho">
+                    <img src="images/Menos.svg" alt="" srcset="">
+                    <p>01</p>
+                    <img src="images/Mais.svg" alt="" srcset="">
+                </div>
 
+                <div class="valor-carrinho">
+                 <p>R$49,99</p>
+                </div>
+
+                <div class="excluir-carrinho">
+                  <img src="images/Excluir.svg" alt="" srcset="">
+                </div>
             </div>
         </div>
         </div>
@@ -56,7 +67,6 @@
         <a href="index.html" class="text-rodape">Home</a>
         <a href="aboutUs.html" class="text-rodape">Sobre nós</a>
         <a href="catalog.html" class="text-rodape">Catálogo</a>
-        <a href="contato.html" class="text-rodape">Contato</a>
     </div>
 </body>
 </html>
