--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kidzy | Catálogo</title>
+    <script type="module" src="./scripts/main.js" defer></script>
 </head>
 <body>
     <!-- M E N U  -->
@@ -36,9 +37,8 @@
             <p class="subtitulos">Você não pode perder!</p>
         </div>
     </div>
-        <!-- L I N H A  U M -->
-    <div class="options-container">
-        <div class="option">
+    <div id="options-container">
+        <!-- <div class="option">
             <div class="op-content">
                 <div class="op-img">
                     <img src="images/produts/op1.jpg" class="options-img">
@@ -52,192 +52,9 @@
                         <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
                 </div>
             </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-        <!-- L I N H A  D O I S -->
-    <div class="options-container">
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>  
-    </div>
-
-            <!-- L I N H A  T R Ê S -->
-    <div class="options-container">
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="option">
-            <div class="op-content">
-                <div class="op-img">
-                    <img src="images/produts/op1.jpg" class="options-img">
-                </div>
-
-                <div class="op-info">
-                    <div class="op-text">
-                        <p class="name">Jogo de montar peças</p>
-                        <p class="price">R$49,99</p>
-                    </div>
-                        <button type="button" class="buy-buttom"><a href="productPage.html"><img src="images/carrinho.svg" class="options-button"></a></button>
-                </div>
-            </div>
-        </div>
+        </div> -->
     </div>
         
-
     <!-- RODAPÉ -->
     <div id="rodape-container">
         <a href="index.html" class="text-rodape">Home</a>
