--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Kidzy | Contato</title>
+    <title>Kidzy | Sobre nós</title>
 </head>
 <body>
     <!-- Menu -->
@@ -24,6 +24,7 @@
             </div>
         </nav>
         </header>
+        
         <div class="banner">
             <img src="images/Banners/AboutUsBanner.svg" alt="" srcset="">
         </div>
